Optimize the details & Update the README. Md

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
  _  ___ / /_/ /_  /   / /_/ /  /   / /_/ /
  /_/  |_\__,_/ /_/    \____//_/    \__,_/
 -------------------------------------------
-https://github.com/1020317774/aurora-vue
+https://github.com/haoyu21/aurora-vue
 
-- aurora :  1.0.0
-- Bulma  :  0.9.4
+- aurora :  1.0
+- author :  Knox <1020317774@qq.com>
 -->
 <!DOCTYPE html>
 <html lang="zh">
